objects/BSB_Discount_Product__c/BSB_Discount_Product__c.object-meta.xml
<CustomObject>
    <label>BSB Discount Product</label>
    <nameField>
        <displayFormat>BSBDP-{00000000}</displayFormat>
        <label>BSB Discount Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BSB Discount Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>