objects/BSB_Discount_Product__c/fields/BSB_Discount__c.field-meta.xml
<CustomField>
    <fullName>BSB_Discount__c</fullName>
    <label>BSB Discount</label>
    <referenceTo>BSB_Discount__c</referenceTo>
    <relationshipLabel>BSB Discount Products</relationshipLabel>
    <relationshipName>BSB_Discount_Products</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>