objects/BSB_Discount_Product__c/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <label>Product Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>80 (toll free)</fullName>
                <color>#54C254</color>
                <label>222-80 (toll free)</label>
            </value>
            <value>
                <fullName>Long Distance</fullName>
                <label>111-Long Distance</label>
            </value>
            <value>
                <fullName>SIP</fullName>
                <color>#54C254</color>
                <label>333-SIP</label>
            </value>
            <value>
                <fullName>Toll Free</fullName>
                <color>#54C254</color>
                <label>444-Toll Free</label>
            </value>
            <value>
                <fullName>UG/VR (LD)</fullName>
                <color>#54C254</color>
                <label>555-UG/VR (LD)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>