objects/BSB_Discount_Product__c/fields/Product_Discount_Termination_Date__c.field-meta.xml
<CustomField>
    <fullName>Product_Discount_Termination_Date__c</fullName>
    <label>Product Discount Termination Date</label>
    <type>Date</type>
</CustomField>